Fixed nav covering content

--- a/angwoo/src/app/components/nav/nav.component.scss
+++ b/angwoo/src/app/components/nav/nav.component.scss
@@ -2,6 +2,8 @@ nav {
     width: 100%;
     position: fixed;
     top: 0px;
-    left: 0px;
     right: 0px;
+    left: 0px;
+    color: white;
+    height: 75px;
 }
